src/objects/System_Exception_Log__c.object
<CustomObject>
    <description>This object contains system exception reporting when errors occur within APEX classes, APEX triggers and from external applications through the use of the SFDC API</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>The action for the integration: insert, upsert, delete</description>
        <label>Action</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <description>the name identifying the source of the data</description>
        <label>Data Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dml_Exception_Type__c</fullName>
        <description>The DML type for exceptions that occur on insert, update, upsert, merge, delete operations</description>
        <label>Dml Exception Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Cause__c</fullName>
        <description>The cause of the exception</description>
        <label>Exception Cause</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Level__c</fullName>
        <description>The level of he exception : CRITICAL, WARNING, INFO</description>
        <label>Exception Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRITICAL</fullName>
                    <default>true</default>
                    <label>CRITICAL</label>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>WARNING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception_Line_Number__c</fullName>
        <description>The line number of the code identifying where the exception occurred</description>
        <label>Exception Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exception_Message_Summary__c</fullName>
        <description>The message summary of the exception used to display in reporting</description>
        <label>Exception Message Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <description>The message of the exception</description>
        <label>Exception Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Run_As_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that was executing the code</description>
        <label>Exception Run As User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Exception_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exception_Stack_Trace__c</fullName>
        <description>The stack trace of the exception</description>
        <label>Exception Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <description>This field describes the type of the exception. This will most likely contain the Exception.getTypeName() method for APEX exceptions</description>
        <label>Exception Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Date__c</fullName>
        <description>The date of the integration</description>
        <label>Integration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The indicator if the integration was successful (true, false)</description>
        <label>Is Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>The name of the sObject or class that was being referenced when the exception occurred (optional)</description>
        <label>Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Reference__c</fullName>
        <description>The id of the sObject record that was being referenced when the exception occurred (optional)</description>
        <label>Object Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Support_Data__c</fullName>
        <description>The encrypted support data to help debug and diagnose the error</description>
        <label>Secure Support Data</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Source_Application__c</fullName>
        <description>The application or source that owns the process</description>
        <label>Source Application</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Data__c</fullName>
        <description>The data to support the debug and diagnosis of the exception. If the supporting data is greater than 131072, the support data will be saved as an attachment and his field will be populated with : See Attachment</description>
        <label>Support Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>System Exception Log</label>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>